set(PRJNAME libcmdh)
set(PRJDIR ${PROJECT_SOURCE_DIR}/${PRJNAME})

set(INCDIRS ${PRJNAME})
#set(DEPS)
set(SRCFILES ${PRJNAME}.c)
set(INCFILES ${PRJNAME}/${PRJNAME}.h)
#set(LIBS " ")
set(LFLAGS " ")
set(CFLAGS " ")

INCLUDE(prebuild)
add_library(${PRJNAME} STATIC ${SRCS} ${INCS})
#add_executable(${PRJNAME} ${SRCS} ${INCS})
#add_executable(${PRJNAME} WIN32 ${SRCS} ${INCS})
INCLUDE(build)
