set(PRJNAME libmmc)
set(PRJDIR ${PROJECT_SOURCE_DIR}/${PRJNAME})

set(INCDIRS ${PRJNAME})
#set(DEPS)
set(SRCFILES mmc_all.c mmc_linux.c mmc_macosx.c mmc_win32.c)
set(INCFILES ${PRJNAME}/${PRJNAME}.h)
#set(LIBS " ")
set(LFLAGS " ")
set(CFLAGS "-Wall -Werror")

INCLUDE(prebuild)
add_library(${PRJNAME} STATIC ${SRCS} ${INCS})
#add_executable(${PRJNAME} ${SRCS} ${INCS})
#add_executable(${PRJNAME} WIN32 ${SRCS} ${INCS})
INCLUDE(build)
